Updated comments
Signed-off-by: Zhaoyuan (Ryan) Fu <fuzhaoyuan@gmail.com>